# plural

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  FUNDING.yml  README.md  compose.yml  env.example  main.py  package.json  project.toml.example  pyproject.toml  requirements.txt  rust-toolchain.toml  rustfmt.toml  test.py
.cargo/: config.toml
.github/: FUNDING.yml
api/: .gitignore  Cargo.toml  Dockerfile  main.py  pyproject.toml
api/src/: error.rs  main.rs
api/src/commands/: base.py  group.py  helpers.py  member.py  userproxy.py
api/src/components/: __init__.py  api.py  base.py  bio.py  config.py  edit.py  help.py  migration.py  pagination.py  proxy.py
api/src/core/: __init__.py  auth.py  avatar.py  emoji.py  errors.py  http.py  models.py  ratelimit.py  route.py  stupid_openapi_patch.py  utils.py  version.py
api/src/db/: __init__.py  autoproxy.py  enums.py  group.py  guild.py  interaction.py  member.py  message.py  proxy_log.py  redis.py  share.py  user.py
api/src/discord/: __init__.py  commands.py  components.py  enums.py  types.py
api/src/discord/models/: __init__.py  application.py  attachment.py  base.py  channel.py  component.py  embed.py  event.py  member.py  message.py  poll.py  resolved.py  user.py  webhook.py
api/src/discord/models/interaction/: __init__.py  response.py
api/src/docs/: __init__.py  autoproxy.py  base.py  group.py  member.py  message.py  user.py
api/src/events/: autocomplete.py  converter.py  interaction.py
api/src/handlers/: message.rs  mod.rs
api/src/middleware/: mod.rs  otel.rs
api/src/models/: __init__.py  application.py  autoproxy.py  member.py  message.py  message.rs  mod.rs  token.rs  usergroup.py
api/src/porting/: base.py  plural.py  pluralkit.py  standard.py  tupperbox.py  v1.py
api/src/routers/: application.py  autoproxy.py  discord.py  donation.py  group.py  member.py  message.py  otel.py  redis_proxy.py  user.py  userproxies.py
bot/: .gitignore  Cargo.toml  Dockerfile  main.py  mix.exs  pyproject.toml
bot/caith/: Cargo.toml
bot/caith/src/: lib.rs
bot/lib/: bot.ex  cache.ex  event_handler.ex  event_supervisor.ex  http.ex  logic.ex  redis_subscriber.ex
bot/src/: __init__.py  healthcheck.rs  http.py  listener.py  logclean.py  logic.py  main.rs  models.py  permission.py  version.py
botpy/: Dockerfile  main.py  pyproject.toml
botpy/caith/: Cargo.toml
botpy/caith/src/: lib.rs
botpy/src/: __init__.py  cache.py  caith.pyi  logic.py  version.py
cdn-worker/: .dev.vars.example  .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  worker-configuration.d.ts  wrangler.toml
cdn-worker/src/: index.ts
core/: Cargo.toml
core/document/: Cargo.toml
core/document/src/: lib.rs
core/src/: crypto.rs  env.rs  lib.rs  otel.rs  redis.rs  redisdb.rs  version.rs
core/src/db/: application.rs  autoproxy.rs  enums.rs  group.rs  guild.rs  member.rs  message.rs  mod.rs  usergroup.rs
core/src/discord/: http.rs  mod.rs
core/src/discord/models/: application.rs  mod.rs
docs/: .dockerignore  .gitignore  Dockerfile  donate.md  donate_crypto.md  index.md  package.json  privacy-policy.html  privacy-policy.md  terms-of-service.html  terms-of-service.md
docs/.vuepress/: config.ts
docs/.vuepress/configs/: head.ts
docs/.vuepress/styles/: index.scss
docs/docs/: donate.md  donate_crypto.md  index.md  privacy-policy.md
docs/docs/.vuepress/: config.ts
docs/docs/guide/: command-reference.md  config.md  faq.md  getting-started.md  groups.md  importing.md  members.md  multiple-accounts.md  proxying.md  userproxies.md
docs/guide/: faq.md  getting-started.md  importing.md  userproxies.md
docs/server-guide/: automod.md  logging-compatibility.md
docs/third-party-applications/: application-guide.md  creating-applications.md  logging-support.md
egress-proxy/: Cargo.toml  Dockerfile  README.md
egress-proxy/src/: main.rs
gateway/: Cargo.toml  Dockerfile
gateway/src/: cache.rs  dedupe_publish.lua  main.rs  publish.lua
interactions/: Dockerfile  README.md  main.py
metrics/: .gitignore  Cargo.toml  Dockerfile  main.py  pyproject.toml
metrics/src/: main.rs
shared/: .gitignore  pyproject.toml
shared/plural/: pyproject.toml
shared/plural/src/plural/: crypto.py  env.py  errors.py  otel.py  utils.py
shared/plural/src/plural/db/: __init__.py  application.py  autoproxy.py  base.py  enums.py  group.py  guild.py  interaction.py  member.py  message.py  proxy_log.py  reply.py  share.py  usergroup.py
shared/version/: Cargo.toml  pyproject.toml
src/: converters.py  errors.py  export_models.py  helpers.py  models.py  project.py  utils.py  version.py
src/api/: __init__.py  drest.py
src/client/: __init__.py  base.py  embeds.py  emoji.py  listeners.py
src/commands/: __init__.py  autocomplete.py  base.py  group.py  importer.py  member.py  userproxy.py
src/components/: __init__.py  base.py  help.py  member.py  userproxy.py
src/core/: __init__.py  auth.py  session.py
src/db/: __init__.py  api_key.py  api_token.py  cfcdnproxy.py  config.py  discord_cache.py  discord_object.py  enums.py  events.py  group.py  group_share.py  helpers.py  httpcache.py  image.py  latch.py  log.py  member.py  message.py  models.py  reply.py  share_code.py  uinteraction.py  userproxy.py  userproxy_interaction.py  userproxy_message.py  webhook.py
src/discord/: __init__.py  commands.py  components.py  http.py  listeners.py  types.py  utils.py
src/docs/: autoproxy.py  group.py  image.py  latch.py  member.py  message.py  responses.py  root.py
src/import_handler/: __init__.py  embed.py  models.py
src/listeners/: __init__.py  message.py  reaction.py
src/logic/: __init__.py  autocomplete.py  cache.py  commands.py  converters.py  discord_object_sync.py  listeners.py  logclean.py  proxy.py  webhook_proxy.py
src/porting/: __init__.py  base.py  log.py  plural.py  pluralkit.py  standard.py  tupperbox.py
src/routers/: autoproxy.py  discord.py  group.py  image.py  latch.py  member.py  message.py  migration.py
src/views/: __init__.py  api_key.py  delete_confirmation.py  help.py
(+167 files in other folders)
