[package]
name = "plural-api"
version = "0.1.0"
edition = "2024"

[dependencies]
plural-core = { path = "../core", features = ["mongo", "redis", "otel", "redis"]}

actix-web = { version = "4.10" }
bcrypt = { version = "0.17" }
bson = { version = "2.14" }
chrono = { version = "0.4" }
derive_more = { version = "2.0" }
http = { version = "1.3" }
lazy_static = { version = "1.5" }
regex = { version = "1.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = { version = "0.10" }
tokio = { version = "1.44", features = ["full"] }

opentelemetry = { version = "0.27" }
opentelemetry-http = { version = "0.27" }
