[project]
name = "bot"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "plural",
    "regex>=2024.11.6",
    "types-regex>=2024.11.6.20241221",
    "uvloop>=0.21.0"
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "src.caith"
manifest-path = "caith/Cargo.toml"
features = ["pyo3/extension-module"]
include = ["*.pyi"]


[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "caith/Cargo.toml"}, {file = "**/*.rs"}]

[tool.uv.sources]
plural = { path = "../shared" }

[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I002",
    "N",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "BLE",
    "B",
    "C4",
    "FA",
    "PIE",
    "T20",
    "RSE",
    "RET",
    "SIM",
    "TC",
    "ARG",
    "ERA",
    "RUF"
]
ignore = ["FA102", "RET501", "E501", "N818"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
