[package]
name = "plural-core"
version = "0.1.0"
edition = "2024"

[dependencies]
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", optional = true, features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", optional = true, default-features = false, features = ["trace", "metrics", "http-proto", "reqwest-client", "reqwest-rustls", "grpc-tonic"] }
opentelemetry-stdout = { version = "0.27", optional = true, features = ["trace", "metrics"] }
fred = { version = "10.0", optional = true, default-features = false, features = ["enable-native-tls", "i-streams", "i-sets", "i-keys", "i-redis-json"] }

[features]
default = []

env = []
version = []
redis = [
    "env",
    "fred"]
mongo = ["env"]
otel = [
    "env",
    "version",
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "opentelemetry-stdout"]
http = ["redis", "otel"]