[package]
name = "plural-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
plural-core = { path = "../core", features = ["version", "env", "otel", "redis"]}
base64 = "0.22"
futures = "0.3"
lazy_static = "1.5"
opentelemetry = "0.27"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "net", "signal"] }
twilight-gateway = { version = "0.16", default-features = false, features = ["rustls-platform-verifier", "twilight-http", "zlib-simd", "rustls-aws_lc_rs"] }
twilight-http = { version = "0.16", default-features = false, features = ["rustls-platform-verifier", "simd-json", "rustls-aws_lc_rs", "hickory"] }
twilight-model = "0.16"
