[project]
name = "metrics"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "opentelemetry-exporter-otlp-proto-http>=1.30.0",
    "pymongo>=4.11.3",
    "requests>=2.32.3",
    "version",
]

[tool.uv.sources]
version = { path = "../shared/version" }

[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I002",
    "N",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "BLE",
    "B",
    "C4",
    "FA",
    "PIE",
    "T20",
    "RSE",
    "RET",
    "SIM",
    "TC",
    "ARG",
    "ERA",
    "RUF"
]
ignore = ["FA102", "RET501", "E501", "N818"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
