[project]
name = "plural"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.12",
    "bcrypt>=4.2.1",
    "beanie>=1.29.0",
    "opentelemetry-exporter-otlp-proto-http>=1.30.0",
    "orjson>=3.10.15",
    "pyvips>=2.2.3",
    "redis>=5.2.1",
    "types-redis>=4.6.0.20241004",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I002",
    "N",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "BLE",
    "B",
    "C4",
    "FA",
    "PIE",
    "T20",
    "RSE",
    "RET",
    "SIM",
    "TC",
    "ARG",
    "ERA",
    "RUF"
]
ignore = ["FA102", "RET501", "E501", "N818"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
